tokamak-optimism/kustomize/overlays/aws/goerli-nightly/aws-logging.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: aws-observability
  labels:
    aws-observability: enabled
