tokamak-optimism/kustomize/overlays/aws/goerli-nightly/env_override.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: batch-submitter
spec:
  template:
    spec:
      containers:
      - name: batch-submitter
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: data-transport-layer
spec:
  template:
    spec:
      containers:
      - name: data-transport-layer
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: l2geth
spec:
  template:
    spec:
      containers:
      - name: l2geth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relayer
spec:
  template:
    spec:
      containers:
      - name: relayer
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: l2geth-replica
spec:
  template:
    spec:
      containers:
      - name: l2geth-replica
