tokamak-optimism/kustomize/overlays/aws/goerli-nightly/resource_override.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: batch-submitter
spec:
  template:
    spec:
      containers:
        - name: batch-submitter
          image: onthertech/optimism.batch-submitter-service:nightly
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 0.5
              memory: 0.75Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: data-transport-layer
spec:
  template:
    spec:
      containers:
        - name: data-transport-layer
          image: onthertech/optimism.data-transport-layer:nightly
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 0.5
              memory: 0.75Gi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: l2geth
spec:
  template:
    spec:
      containers:
        - name: l2geth
          image: onthertech/optimism.l2geth:nightly
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1
              memory: 1.75Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relayer
spec:
  template:
    spec:
      containers:
        - name: relayer
          image: onthertech/optimism.tokamak-message-relayer:nightly
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 0.25
              memory: 0.25Gi
