tokamak-optimism/kustomize/overlays/aws/goerli-nightly/service_override.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-transport-layer-svc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: l2geth-svc
# spec:
#   type: NodePort
