tokamak-optimism/kustomize/overlays/aws/goerli-nightly/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: l2geth-ingress-alb
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: l2geth
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    external-dns.alpha.kubernetes.io/hostname: rpc.titan-goerli-nightly.tokamak.network
    alb.ingress.kubernetes.io/conditions.ws-rule: >
      [
        {
          "field": "http-header",
          "httpHeaderConfig": {
              "httpHeaderName": "Upgrade",
              "values": ["websocket"]
          }
        },
        {
          "field": "http-header",
          "httpHeaderConfig": {
            "httpHeaderName": "Connection",
            "values": ["Upgrade"]
          }
        }
      ]
    alb.ingress.kubernetes.io/actions.ws-rule: >
      {
        "type": "forward",
        "forwardConfig": {
          "targetGroups": [{
            "serviceName": "proxyd-l2geth-svc",
            "servicePort": "8546"
          }]
        }
      }
spec:
  tls:
    - hosts:
        - rpc.titan-goerli-nightly.tokamak.network
  rules:
    - host: rpc.titan-goerli-nightly.tokamak.network
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: ws-rule
                port:
                  name: use-annotation
          - path: /
            pathType: Exact
            backend:
              service:
                name: proxyd-l2geth-svc
                port:
                  number: 8545
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: l2geth-ingress-alb-bad-request
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: l2geth
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/actions.http-badrequest: >
      {
        "type": "fixed-response",
        "fixedResponseConfig": {
          "contentType": "application/json",
          "statusCode": "400",
          "messageBody": "{\"jsonrpc\": \"2.0\",\"error\": {\"code\": -32600,\"message\": \"HTTPS is required\"}}"
        }
      }
spec:
  rules:
    - host: rpc.titan-goerli-nightly.tokamak.network
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: http-badrequest
                port:
                  name: use-annotation
